<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"

    >

    <RelativeLayout
        android:layout_width="@dimen/_260sdp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/dilog_bg">


        <TextView
            android:id="@+id/txtThankyou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="Alert"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <View
            android:id="@+id/line"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_1sdp"
            android:layout_below="@id/txtThankyou"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@color/gray_divider" />

        <TextView
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/_2sdp"
            android:text="@string/move_desc1"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/_2sdp"
            android:text="@string/move_desc2"
            android:textAllCaps="false"
            android:textColor="@color/black" />


        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt2"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnDeny"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_7sdp"
                android:background="@drawable/button_bg"
                android:gravity="center"
                android:paddingHorizontal="@dimen/_5sdp"
                android:paddingVertical="@dimen/_7sdp"
                android:text="@string/deny"
                android:textAllCaps="true"
                android:textColor="@color/White" />

            <TextView
                android:id="@+id/btnAllow"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:gravity="center"
                android:paddingHorizontal="@dimen/_5sdp"
                android:paddingVertical="@dimen/_7sdp"
                android:text="@string/allow"
                android:textAllCaps="true"
                android:textColor="@color/White" />


        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>
